# time_sync

./: CMakeLists.txt  LICENSE  README.md  idf_component.yml  time_sync.cpp
examples/time_sync_test/: CMakeLists.txt
examples/time_sync_test/main/: CMakeLists.txt  idf_component.yml  main.cpp
include/: time_sync.hpp
